mengedit file latihan.html

--- a/study_2/latihan.html
+++ b/study_2/latihan.html
@@ -30,7 +30,7 @@
         <p>Progate adalah platfrom online untuk belajar pemrograman</p>
         <p>
           kami menawarkan lingkungan pemrograman yang lengkap untuk mempermudah
-          Anda memulai
+          Anda memulai!
         </p>
         <!-- membuat button -->
         <div class="btn-wrapper">
